further internationalization of Home page + first js language codes - #2

--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_en.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_en.properties
@@ -13,7 +13,7 @@ i18n.en.home.jsp.actualCoverage.legend=Coverage of hours:
 i18n.en.home.jsp.uniqueRegister=Application for substitution...
 i18n.en.home.jsp.explanation=Explanation:
 i18n.en.home.jsp.explanation.two=2 - Red&nbsp;
-i18n.en.home.jsp.explanation.two.text=backgrounded hours we seek for applicants the most. Therefore, I you can, please apply for one of the hours those have red background.
+i18n.en.home.jsp.explanation.two.text=backgrounded hours we seek for applicants the most. Therefore, if you can, please apply for one of the hours those have red background.
 i18n.en.home.jsp.explanation.one=1 - Yellow&nbsp;
 i18n.en.home.jsp.explanation.one.text=backgrounded hours, when the adoration is continuous but not secured properly - we glad to accept applicants for these hours too.
 i18n.en.home.jsp.explanation.green=Green&nbsp;
@@ -26,3 +26,10 @@ i18n.en.home.jsp.explanation.blue=Blue&nbsp;&nbsp;
 i18n.en.home.jsp.explanation.blue.text=backgrounded hours, when the Perpetual Adoration temporary ceased in the Chapel, but there is at least one registered Online adorator who does than adoration remotely.
 i18n.en.home.jsp.application.intro=Application is possible:
 i18n.en.home.jsp.application.method1=- via online registration on this page: <a href="/adoration/adorRegistration" target="_self">Application for Perpetual Adoration</a>.
+i18n.en.home.jsp.application.method2=- by filling an application form that can be found in the Chapel. After filling the form, please put it into the postbox of the Piarist monastery.
+i18n.en.home.jsp.application.method3=- by writing e-mail to this address: <a href="mailto:prhvac@gmail.com">prhvac@gmail.com</a>
+i18n.en.home.jsp.application.method4=- by calling the following phone number: <em>+36-70-375-4140</em>.
+i18n.en.home.jsp.documents.downloadable=Downloadable documents:
+i18n.en.home.jsp.documents.downloadable.mail=- <a href="/resources/img/BishopLetter-BeerM.pdf" target="new">Mail from bishop dr. Miklós Beer to the registrated adorators (in Hungarian)</a>
+i18n.en.home.jsp.documents.downloadable.rules=- <a href="/resources/img/AlapvetoSzabalyok.pdf" target="new">Rules to be followed by adorators in the Chapel (in Hungarian)</a>
+i18n.en.home.jsp.documents.downloadable.data=- <a href="/resources/img/AdatkezelesiSzabalyzat.pdf" target="new">Data Handling and Management Rules of the site (in Hungarian)</a>.
