--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_hu.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_hu.properties
@@ -26,3 +26,10 @@ i18n.hu.home.jsp.explanation.blue=Kék&nbsp;&nbsp;
 i18n.hu.home.jsp.explanation.blue.text=színűek azok az órák, amelyekben a kápolnában ideiglenesen szünetel az Örökimádás, de van bejegyzett Online adoráló, aki távolról végzi az Örökimádást.
 i18n.hu.home.jsp.application.intro=Jelentkezni lehet:
 i18n.hu.home.jsp.application.method1=- Közvetlenül, ezen az oldalon: <a href="/adoration/adorRegistration" target="_self">Jelentkezés örökimádásra</a>.
+i18n.hu.home.jsp.application.method2=- A kápolnában elhelyezett jelentkezési lapokon, kitöltés után azt bedobva a piarista rendház postaládájába.
+i18n.hu.home.jsp.application.method3=- E-mailben erre a címre írva: <a href="mailto:prhvac@gmail.com">prhvac@gmail.com</a>
+i18n.hu.home.jsp.application.method4=- A következő telefonszámok egyikén: <em>30-524-8291, 70-375-4140</em>.
+i18n.hu.home.jsp.documents.downloadable=Letölthető dokumentumok:
+i18n.hu.home.jsp.documents.downloadable.mail=- <a href="/resources/img/BishopLetter-BeerM.pdf" target="new">dr. Beer Miklós püspök atya levele a regisztrált szentségimádókhoz</a>
+i18n.hu.home.jsp.documents.downloadable.rules=- <a href="/resources/img/AlapvetoSzabalyok.pdf" target="new">Alapvető szabályok szentségimádók számára</a>
+i18n.hu.home.jsp.documents.downloadable.data=- <a href="/resources/img/AdatkezelesiSzabalyzat.pdf" target="new">Adatkezelési Szabályzat</a>.
