--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_en.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_en.properties
@@ -7,6 +7,20 @@ i18n.en.navbar.html.nav-application-log=ADMINISTRATION
 i18n.en.navbar.html.nav-login=LOGIN
 i18n.en.navbar.html.nav-exit=LOGOUT
 
+i18n.en.coverageBar.html.hours=Hour
+i18n.en.coverageBar.html.days=Day
+i18n.en.coverageBar.html.q1=Night
+i18n.en.coverageBar.html.q2=Morning
+i18n.en.coverageBar.html.q3=Afternoon
+i18n.en.coverageBar.html.q4=Evening
+i18n.en.coverageBar.html.day.0=Sunday
+i18n.en.coverageBar.html.day.1=Monday
+i18n.en.coverageBar.html.day.2=Tuesday
+i18n.en.coverageBar.html.day.3=Wednesday
+i18n.en.coverageBar.html.day.4=Thursday
+i18n.en.coverageBar.html.day.5=Friday
+i18n.en.coverageBar.html.day.6=Saturday
+
 i18n.en.home.jsp.title=Perpetual Adoration - Vác
 i18n.en.home.jsp.altImage=Perpetual Adoration image
 i18n.en.home.jsp.actualCoverage.legend=Coverage of hours:
