--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_hu.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_hu.properties
@@ -7,6 +7,20 @@ i18n.hu.navbar.html.nav-application-log=ADMINISZTRÁCIÓ
 i18n.hu.navbar.html.nav-login=BELÉPÉS
 i18n.hu.navbar.html.nav-exit=KILÉPÉS
 
+i18n.hu.coverageBar.html.hours=Órák
+i18n.hu.coverageBar.html.days=Napok
+i18n.hu.coverageBar.html.q1=Hajnal
+i18n.hu.coverageBar.html.q2=Délelőtt
+i18n.hu.coverageBar.html.q3=Délután
+i18n.hu.coverageBar.html.q4=Este
+i18n.hu.coverageBar.html.day.0=vasárnap
+i18n.hu.coverageBar.html.day.1=hétfő
+i18n.hu.coverageBar.html.day.2=kedd
+i18n.hu.coverageBar.html.day.3=szerda
+i18n.hu.coverageBar.html.day.4=csütörtök
+i18n.hu.coverageBar.html.day.5=péntek
+i18n.hu.coverageBar.html.day.6=szombat
+
 i18n.hu.home.jsp.title=Örökimádás - Vác
 i18n.hu.home.jsp.altImage=Örökimádás kép
 i18n.hu.home.jsp.actualCoverage.legend=Az órák aktuális fedettsége
