--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/web_en.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/web_en.properties
@@ -1,8 +1,40 @@
-web.en.common.loggedInUserLegend=User: 
-web.en.common.dayName.sunday=Sunday
-web.en.common.dayName.monday=Monday
-web.en.common.dayName.tuesday=Tuesday
-web.en.common.dayName.wednesday=Wednesday
-web.en.common.dayName.thursday=Thursday
-web.en.common.dayName.friday=Friday
-web.en.common.dayName.saturday=Saturday
+web.en.common.loggedInUserLegend=User:
+web.en.common.application.version=Perpetual adoration - 
+web.en.common.day.0=Sunday
+web.en.common.day.1=Monday
+web.en.common.day.2=Tuesday
+web.en.common.day.3=Wednesday
+web.en.common.day.4=Thursday
+web.en.common.day.5=Friday
+web.en.common.day.6=Saturday
+web.en.coordinator.0=Coordinator of hour: 0
+web.en.coordinator.1=Coordinator of hour: 1
+web.en.coordinator.2=Coordinator of hour: 2
+web.en.coordinator.3=Coordinator of hour: 3
+web.en.coordinator.4=Coordinator of hour: 4
+web.en.coordinator.5=Coordinator of hour: 5
+web.en.coordinator.6=Coordinator of hour: 6
+web.en.coordinator.7=Coordinator of hour: 7
+web.en.coordinator.8=Coordinator of hour: 8
+web.en.coordinator.9=Coordinator of hour: 9
+web.en.coordinator.10=Coordinator of hour: 10
+web.en.coordinator.11=Coordinator of hour: 11
+web.en.coordinator.12=Coordinator of hour: 12
+web.en.coordinator.13=Coordinator of hour: 13
+web.en.coordinator.14=Coordinator of hour: 14
+web.en.coordinator.15=Coordinator of hour: 15
+web.en.coordinator.16=Coordinator of hour: 16
+web.en.coordinator.17=Coordinator of hour: 17
+web.en.coordinator.18=Coordinator of hour: 18
+web.en.coordinator.19=Coordinator of hour: 19
+web.en.coordinator.20=Coordinator of hour: 20
+web.en.coordinator.21=Coordinator of hour: 21
+web.en.coordinator.22=Coordinator of hour: 22
+web.en.coordinator.23=Coordinator of hour: 23
+web.en.coordinator.24=Night coordinator (0-5 hours)
+web.en.coordinator.30=Morning coordinator (6-11 hours)
+web.en.coordinator.36=Afternoon coordinator (12-17 hours)
+web.en.coordinator.42=Evening coordinator (18-23 hours)
+web.en.coordinator.48=General coordinator
+web.en.coordinator.96=Spiritual leader
+
