--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/web_hu.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/web_hu.properties
@@ -1,8 +1,40 @@
-web.hu.common.loggedInUserLegend=Belépve: 
-web.hu.common.dayName.sunday=vasárnap
-web.hu.common.dayName.monday=hétfő
-web.hu.common.dayName.tuesday=kedd
-web.hu.common.dayName.wednesday=szerda
-web.hu.common.dayName.thursday=csütörtök
-web.hu.common.dayName.friday=péntek
-web.hu.common.dayName.saturday=szombat
+web.hu.common.loggedInUserLegend=Belépve:
+web.hu.common.application.version=Örökimádás - 
+web.hu.common.day.0=vasárnap
+web.hu.common.day.1=hétfő
+web.hu.common.day.2=kedd
+web.hu.common.day.3=szerda
+web.hu.common.day.4=csütörtök
+web.hu.common.day.5=péntek
+web.hu.common.day.6=szombat
+web.hu.coordinator.0=0. óra órakoordinátora
+web.hu.coordinator.1=1. óra órakoordinátora
+web.hu.coordinator.2=2. óra órakoordinátora
+web.hu.coordinator.3=3. óra órakoordinátora
+web.hu.coordinator.4=4. óra órakoordinátora
+web.hu.coordinator.5=5. óra órakoordinátora
+web.hu.coordinator.6=6. óra órakoordinátora
+web.hu.coordinator.7=7. óra órakoordinátora
+web.hu.coordinator.8=8. óra órakoordinátora
+web.hu.coordinator.9=9. óra órakoordinátora
+web.hu.coordinator.10=10. óra órakoordinátora
+web.hu.coordinator.11=11. óra órakoordinátora
+web.hu.coordinator.12=12. óra órakoordinátora
+web.hu.coordinator.13=13. óra órakoordinátora
+web.hu.coordinator.14=14. óra órakoordinátora
+web.hu.coordinator.15=15. óra órakoordinátora
+web.hu.coordinator.16=16. óra órakoordinátora
+web.hu.coordinator.17=17. óra órakoordinátora
+web.hu.coordinator.18=18. óra órakoordinátora
+web.hu.coordinator.19=19. óra órakoordinátora
+web.hu.coordinator.20=20. óra órakoordinátora
+web.hu.coordinator.21=21. óra órakoordinátora
+web.hu.coordinator.22=22. óra órakoordinátora
+web.hu.coordinator.23=23. óra órakoordinátora
+web.hu.coordinator.24=Éjszakai napszak-koordinátor (0-5 óra)
+web.hu.coordinator.30=Délelőtti napszak-koordinátor (6-11 óra)
+web.hu.coordinator.36=Délutáni napszak-koordinátor (12-17 óra)
+web.hu.coordinator.42=Esti napszak-koordinátor (18-23 óra)
+web.hu.coordinator.48=Általános koordinátor
+web.hu.coordinator.96=Spirituális vezető
+
