internationalization of social login, adorator registration and information pages

--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_en.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_en.properties
@@ -1,3 +1,7 @@
+i18n.en.common.yes=Yes
+i18n.en.common.no=No
+i18n.en.common.cancel=Cancel
+
 i18n.en.navbar.html.nav-home=HOME
 i18n.en.navbar.html.nav-ador-registration=REGISTRATION FOR ADORATION
 i18n.en.navbar.html.nav-ador-live=ONLINE ADORATION
@@ -6,6 +10,8 @@ i18n.en.navbar.html.nav-ador-list=ADORATOR LIST
 i18n.en.navbar.html.nav-application-log=ADMINISTRATION
 i18n.en.navbar.html.nav-login=LOGIN
 i18n.en.navbar.html.nav-exit=LOGOUT
+
+i18n.en.commonConfirm.html.title=Are you sure?
 
 i18n.en.coverageBar.html.hours=Hour
 i18n.en.coverageBar.html.days=Day
@@ -20,6 +26,13 @@ i18n.en.coverageBar.html.day.3=Wednesday
 i18n.en.coverageBar.html.day.4=Thursday
 i18n.en.coverageBar.html.day.5=Friday
 i18n.en.coverageBar.html.day.6=Saturday
+
+i18n.en.commonConfirm.html.title=Please Confirm
+
+i18n.en.sendMessage.html.title=Send a Message
+i18n.en.sendMessage.html.sender=Your availability (e-mail or phone number): 
+i18n.en.sendMessage.html.message=Message:
+i18n.en.sendMessage.html.send=Send
 
 i18n.en.home.jsp.title=Perpetual Adoration - Vác
 i18n.en.home.jsp.altImage=Perpetual Adoration image
@@ -47,3 +60,85 @@ i18n.en.home.jsp.documents.downloadable=Downloadable documents:
 i18n.en.home.jsp.documents.downloadable.mail=- <a href="/resources/img/BishopLetter-BeerM.pdf" target="new">Mail from bishop dr. Miklós Beer to the registrated adorators (in Hungarian)</a>
 i18n.en.home.jsp.documents.downloadable.rules=- <a href="/resources/img/AlapvetoSzabalyok.pdf" target="new">Rules to be followed by adorators in the Chapel (in Hungarian)</a>
 i18n.en.home.jsp.documents.downloadable.data=- <a href="/resources/img/AdatkezelesiSzabalyzat.pdf" target="new">Data Handling and Management Rules of the site (in Hungarian)</a>.
+
+i18n.en.live.jsp.title=Perpetual Adoration - Vác - Live broadcast
+i18n.en.live.jsp.login1=You are not logged in. Please, if you can, login with your 
+i18n.en.live.jsp.login2= or 
+i18n.en.live.jsp.login3=&nbsp;account.
+i18n.en.live.jsp.liveAdoration=Live broadcast:
+i18n.en.live.jsp.jump=Jump to the web camera of Perpetual Adoration
+
+i18n.en.adorRegistration.jsp.title=Perpetual Adoration - Vác - Registration for the Perpetual Adoration
+i18n.en.adorRegistration.jsp.login1=You are not logged in. Please, if you can, login with your 
+i18n.en.adorRegistration.jsp.login2= or 
+i18n.en.adorRegistration.jsp.login3=&nbsp;account.
+i18n.en.adorRegistration.jsp.yes=Yes, I do answer for the call!<br/>I want to be with Jesus, whose presence is real in the Holiest Sacrament of the Altar,<br />and I express my intend to adore Him for an hour, in every week<br />at the Saint Anna Piarist Church at Vác, Hungary.<br>
+i18n.en.adorRegistration.jsp.name=Name:
+i18n.en.adorRegistration.jsp.nameError=Name is required!
+i18n.en.adorRegistration.jsp.email=E-mail:
+i18n.en.adorRegistration.jsp.emailError=Specified e-mail is incorrect!
+i18n.en.adorRegistration.jsp.phone=Phone number:
+i18n.en.adorRegistration.jsp.phoneError=Specified number is incorrect!
+i18n.en.adorRegistration.jsp.select=Select the hour!
+i18n.en.adorRegistration.jsp.selectHelp=&nbsp;To help your selection, please see tha actual coverage for the whole week:
+i18n.en.adorRegistration.jsp.coverageExplanation=&nbsp;Hours marked with Green color were undertaken by at least two adorators, therefore if possible, preferably choose hours from <span style="background-color:#fd726f">&nbsp;2 - Red&nbsp;</span> ones or from the <span style="background-color:#fdf467">&nbsp;1 - Yellow&nbsp;</span> ones, because these are the hours we are seeking for new adorators.
+i18n.en.adorRegistration.jsp.coverageExplanation2=Of course, in case none of the hours marked with Red or Yellow is suitable for you, we are glad to see you by selecting a Green one.
+i18n.en.adorRegistration.jsp.coverageExplanation3=Hours, when the adoration happens in Online mode, so remotely, marked with <span style="background-color:lightskyblue">&nbsp;Blue&nbsp;</span> color.
+i18n.en.adorRegistration.jsp.selectedDay=Select Day:
+i18n.en.adorRegistration.jsp.selectedHour=Select Hour:
+i18n.en.adorRegistration.jsp.selectedMethod=Method of adoration:
+i18n.en.adorRegistration.jsp.methodA=Weekly, from the Perpetual Adoration Chapel in Vác
+i18n.en.adorRegistration.jsp.methodB=Weekly, remotely, as Online Adoration
+i18n.en.adorRegistration.jsp.methodC=Occasionally, not regularly
+i18n.en.adorRegistration.jsp.otherComment=Other comment:&nbsp;
+i18n.en.adorRegistration.jsp.volunteerOrganizer=Would you be help as a volunteer organizer too?&nbsp;
+i18n.en.adorRegistration.jsp.consent=Personal Data Handling - Consent:&nbsp;
+i18n.en.adorRegistration.jsp.consentIssue=Without you consent we shall not accept your application!
+i18n.en.adorRegistration.jsp.consentYes=Yes, referring to the EU GDPR law, I do consent to handle my personal data.
+i18n.en.adorRegistration.jsp.consentNo=No, I do not consent, therefore I don't want to be a registered adorator.
+i18n.en.adorRegistration.jsp.dataProcessingPolicy=Data Processing Policy can be found here (in Hungarian).&nbsp;
+i18n.en.adorRegistration.jsp.registerNo=Exit, without registration
+i18n.en.adorRegistration.jsp.registerYes=Register me, now
+
+i18n.en.registrationSuccess.jsp.title=Perpetual Adoration - Vác - Successful Registration
+i18n.en.registrationSuccess.jsp.success=Successful Registration
+i18n.en.registrationSuccess.jsp.successText1=Your registration will be processed soon, and by using your e-mail address or phone number, we will contact to you for data validation and for confirming your registration.
+i18n.en.registrationSuccess.jsp.successText2=In the meantime, please read the letter of bishop dr. Miklos Beer 
+i18n.en.registrationSuccess.jsp.successText3=from here (in Hungarian)
+i18n.en.registrationSuccess.jsp.successText4=,<br />the 
+i18n.en.registrationSuccess.jsp.successText5=information sheet that was created for the Registered Adorators,
+i18n.en.registrationSuccess.jsp.successText6=<br />and please, start your adoration at the committed hour.
+i18n.en.registrationSuccess.jsp.successText7=You will be redirected to the main page of the Perpetual Adoration in seconds... 
+i18n.en.registrationSuccess.jsp.successText8=In case it does not happen, please continue at the Perpetual Adoration main page 
+i18n.en.registrationSuccess.jsp.successText9=by clicking on this link
+
+i18n.en.login.jsp.title=Perpetual Adoration - Vác - Social Login
+i18n.en.login.jsp.notLoggedIn=You are not logged in. Please, if you can, login/register to Perpetual Adoration web site in order to get access to additional information.
+i18n.en.login.jsp.firstLoginCase=Please note that after the first login, it may take a few days for the final identification to take place and for you to have access to further information.
+i18n.en.login.jsp.loginText1=Login/site registration may happen by using various methods:
+i18n.en.login.jsp.loginText2=You may use your Google account: 
+i18n.en.login.jsp.loginText3=, (click on the Google logo!)
+i18n.en.login.jsp.loginText4=or you may use your Facebook account too: 
+i18n.en.login.jsp.loginText5= , (click on the Facebook logo!)
+
+i18n.en.guestinfo.jsp.title=Perpetual Adoration - Vác - Personal Information
+i18n.en.guestinfo.jsp.infoTitle=Information
+i18n.en.guestinfo.jsp.gInfo=Details of the Google account associated with you:
+i18n.en.guestinfo.jsp.fInfo=Details of the Facebook account associated with you:
+i18n.en.guestinfo.jsp.mainCoordinatorInfo=Availability of Coordinators
+i18n.en.guestinfo.jsp.noInfo=Sorry, no data is available.
+i18n.en.guestinfo.jsp.msgInfo=Send a Message to the Main Coordinator...
+i18n.en.guestinfo.jsp.send=Send a Message
+
+i18n.en.information.jsp.title=Perpetual Adoration - Vác - Information
+i18n.en.information.jsp.hours=Committed hours
+i18n.en.information.jsp.noHours=You have no committed hours.
+i18n.en.information.jsp.adorators=Adorators now
+i18n.en.information.jsp.noData=Sorry, there is no data to show.
+i18n.en.information.jsp.nextAdorators=Adorators in the next hour
+i18n.en.information.jsp.coordinators=Availability of Daily Coordinators
+i18n.en.information.jsp.getExcelDailyInfo=Adoration Coverage
+i18n.en.information.jsp.getExcelHourlyInfo=Download Hour Coordinator information
+i18n.en.information.jsp.getExcelAdoratorInfo=Download self data
+i18n.en.information.jsp.hourlyCoordinators=Availability of the Hour Coordinators
+i18n.hu.information.jsp.downloads=Downloads
