--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_hu.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_hu.properties
@@ -1,3 +1,7 @@
+i18n.hu.common.yes=Igen
+i18n.hu.common.no=Nem
+i18n.hu.common.cancel=Mégsem
+
 i18n.hu.navbar.html.nav-home=ÖRÖKIMÁDÁS
 i18n.hu.navbar.html.nav-ador-registration=JELENTKEZÉS ÖRÖKIMÁDÁSRA
 i18n.hu.navbar.html.nav-ador-live=ÉLŐ KÖZVETÍTÉS
@@ -6,6 +10,8 @@ i18n.hu.navbar.html.nav-ador-list=ADORÁLÓLISTA
 i18n.hu.navbar.html.nav-application-log=ADMINISZTRÁCIÓ
 i18n.hu.navbar.html.nav-login=BELÉPÉS
 i18n.hu.navbar.html.nav-exit=KILÉPÉS
+
+i18n.hu.commonConfirm.html.title=Megerősítés kérés
 
 i18n.hu.coverageBar.html.hours=Órák
 i18n.hu.coverageBar.html.days=Napok
@@ -20,6 +26,13 @@ i18n.hu.coverageBar.html.day.3=szerda
 i18n.hu.coverageBar.html.day.4=csütörtök
 i18n.hu.coverageBar.html.day.5=péntek
 i18n.hu.coverageBar.html.day.6=szombat
+
+i18n.hu.commonConfirm.html.title=Megerősítés kérés
+
+i18n.hu.sendMessage.html.title=Üzenetküldés
+i18n.hu.sendMessage.html.sender=Az Ön elérhetősége (telefonszám vagy e-mail): 
+i18n.hu.sendMessage.html.message=Üzenet:
+i18n.hu.sendMessage.html.send=Üzenet küldése
 
 i18n.hu.home.jsp.title=Örökimádás - Vác
 i18n.hu.home.jsp.altImage=Örökimádás kép
@@ -47,3 +60,85 @@ i18n.hu.home.jsp.documents.downloadable=Letölthető dokumentumok:
 i18n.hu.home.jsp.documents.downloadable.mail=- <a href="/resources/img/BishopLetter-BeerM.pdf" target="new">dr. Beer Miklós püspök atya levele a regisztrált szentségimádókhoz</a>
 i18n.hu.home.jsp.documents.downloadable.rules=- <a href="/resources/img/AlapvetoSzabalyok.pdf" target="new">Alapvető szabályok szentségimádók számára</a>
 i18n.hu.home.jsp.documents.downloadable.data=- <a href="/resources/img/AdatkezelesiSzabalyzat.pdf" target="new">Adatkezelési Szabályzat</a>.
+
+i18n.hu.live.jsp.title=Örökimádás - Vác - Élő Közvetítés
+i18n.hu.live.jsp.login1=Ön nincs bejelentkezve, kérjük, amennyiben teheti, lépjen be 
+i18n.hu.live.jsp.login2= vagy 
+i18n.hu.live.jsp.login3=&nbsp;azonosítójával.
+i18n.hu.live.jsp.liveAdoration=Élő közvetítés:
+i18n.hu.live.jsp.jump=Urgás az Örökimádás Webkamerájához
+
+i18n.hu.adorRegistration.jsp.title=Örökimádás - Vác - Jelentkezés Örökimádásra
+i18n.hu.adorRegistration.jsp.login1=Ön nincs bejelentkezve, kérjük a regisztrálás előtt lépjen be 
+i18n.hu.adorRegistration.jsp.login2= vagy 
+i18n.hu.adorRegistration.jsp.login3=&nbsp;azonosítójával.
+i18n.hu.adorRegistration.jsp.yes=Igen, válaszolok a hívásra!<br/>Jézussal akarok lenni, aki valóságosan jelen van a Legszentebb Oltáriszentségben,<br/>és minden héten egy órán keresztül imádni akarom Őt<br/>a váci Szent Anna Piarista Templomban.<br>
+i18n.hu.adorRegistration.jsp.name=Név:
+i18n.hu.adorRegistration.jsp.nameError=Név megadása szükséges!
+i18n.hu.adorRegistration.jsp.email=E-mail:
+i18n.hu.adorRegistration.jsp.emailError=A megadott e-mail cím nem helyes!
+i18n.hu.adorRegistration.jsp.phone=Telefonszám:
+i18n.hu.adorRegistration.jsp.phoneError=A megadott telefonszám nem helyes!
+i18n.hu.adorRegistration.jsp.select=Válassza ki a napot és az órát!
+i18n.hu.adorRegistration.jsp.selectHelp=&nbsp;Segítségül megmutatjuk az aktuális órafedettséget az egész hétre:
+i18n.hu.adorRegistration.jsp.coverageExplanation=&nbsp;A zöld színnel jelölt órákat már legalább ketten vállalták, ezért amennyiben lehetséges, elsősorban a <span style="background-color:#fd726f">&nbsp;2 - Pirossal&nbsp;</span> jelölt órák közül, vagy az <span style="background-color:#fdf467">&nbsp;1 - Sárgával&nbsp;</span> jelölt órák közül válasszon, mert ezekre az időpontokra keresünk elsősorban szentségimádókat.
+i18n.hu.adorRegistration.jsp.coverageExplanation2=Természetesen - ha a fenti pirossal vagy sárgával jelölt órák közül egyik sem felel meg, örömmel várjuk a zölddel jelöltekben is.
+i18n.hu.adorRegistration.jsp.coverageExplanation3=A <span style="background-color:lightskyblue">&nbsp;kék&nbsp;</span> négyzetek azokat az órákat jelölik, amikor távolról, online adoráló van jelen.
+i18n.hu.adorRegistration.jsp.selectedDay=Választott nap:
+i18n.hu.adorRegistration.jsp.selectedHour=Választott óra:
+i18n.hu.adorRegistration.jsp.selectedMethod=Adorálás módja:
+i18n.hu.adorRegistration.jsp.methodA=Heti rendszerességgel, Vácott, az Örökimádás kápolnából
+i18n.hu.adorRegistration.jsp.methodB=Heti rendszerességgel, távolról, Online módon
+i18n.hu.adorRegistration.jsp.methodC=Alkalmanként, nem rendszeresen
+i18n.hu.adorRegistration.jsp.otherComment=Egyéb megjegyzés:&nbsp;
+i18n.hu.adorRegistration.jsp.volunteerOrganizer=Szervezőként is részt szeretne venni?&nbsp;
+i18n.hu.adorRegistration.jsp.consent=Hozzájárulás személyes adatok kezeléséhez:&nbsp;
+i18n.hu.adorRegistration.jsp.consentIssue=Adatkezelési hozzájárulás nélkül a jelentkezést nem tudjuk elfogadni!
+i18n.hu.adorRegistration.jsp.consentYes=Igen, hozzájárulok, az Európai Parlament és a Tanács (EU) 2016/679 rendeletével (GDPR) összhangban.
+i18n.hu.adorRegistration.jsp.consentNo=Nem járulok hozzá, és így a regisztrált szentségimádásról is lemondok.
+i18n.hu.adorRegistration.jsp.dataProcessingPolicy=Az Adatkezelési Szabályzat megtekinthető itt.&nbsp;
+i18n.hu.adorRegistration.jsp.registerNo=Mégsem jelentkezem
+i18n.hu.adorRegistration.jsp.registerYes=Jelentkezés elküldése
+
+i18n.hu.registrationSuccess.jsp.title=Örökimádás - Vác - Sikeres Regisztráció
+i18n.hu.registrationSuccess.jsp.success=Sikeres Regisztráció
+i18n.hu.registrationSuccess.jsp.successText1=Jelentkezését hamarosan feldolgozzuk, és a megadott telefonszámon, vagy e-mailen felkeressük Önt adategyeztetésre.
+i18n.hu.registrationSuccess.jsp.successText2=Addig is, kérjük olvassa el dr. Beer Miklós püspök atya levelét 
+i18n.hu.registrationSuccess.jsp.successText3=itt
+i18n.hu.registrationSuccess.jsp.successText4=, a szentségimádóknak szóló 
+i18n.hu.registrationSuccess.jsp.successText5=tájékoztatót,
+i18n.hu.registrationSuccess.jsp.successText6=valamint nyugodtan - a vállalt órájában - kezdje meg a heti rendszeres szentségimádást.
+i18n.hu.registrationSuccess.jsp.successText7=Néhány másodperc múlva átirányítjuk Önt az Örökimádás főoldalára. 
+i18n.hu.registrationSuccess.jsp.successText8=Amennyiben ez mégsem történne meg, kérjük folytassa az Örökimádás oldalán 
+i18n.hu.registrationSuccess.jsp.successText9=erre a linkre kattintva
+
+i18n.hu.login.jsp.title=Örökimádás - Vác - Belépés
+i18n.hu.login.jsp.notLoggedIn=Ön nincs bejelentkezve, kérjük lépjen be (vagy regisztráljon), hogy további oldalakhoz is hozzáférjen.
+i18n.hu.login.jsp.firstLoginCase=Kérjük vegye figyelembe, hogy a legelső bejelentkezés után még eltelhet pár nap mire a végleges azonosítás megtörténik, és további információkhoz is hozzáférhet.
+i18n.hu.login.jsp.loginText1=A belépés többféleképpen is történhet:
+i18n.hu.login.jsp.loginText2=Használhatja például a Google-t azonosításra: 
+i18n.hu.login.jsp.loginText3=, (kattintson a Google logora!)
+i18n.hu.login.jsp.loginText4=de beléphet Facebook fiókjával is: 
+i18n.hu.login.jsp.loginText5= , (kattintson a Facebook logora!)
+
+i18n.hu.guestinfo.jsp.title=Örökimádás - Vác - Személyes Információk
+i18n.hu.guestinfo.jsp.infoTitle=Információk
+i18n.hu.guestinfo.jsp.gInfo=Az Önhöz rendelt Google fiók adatai:
+i18n.hu.guestinfo.jsp.fInfo=Az Önhöz rendelt Facebook fiók adatai:
+i18n.hu.guestinfo.jsp.mainCoordinatorInfo=Fő koordinátorok elérhetősége
+i18n.hu.guestinfo.jsp.noInfo=Sajnos nincs megjeleníthető adat.
+i18n.hu.guestinfo.jsp.msgInfo=Üzenet küldése az általános koordinátornak...
+i18n.hu.guestinfo.jsp.send=Üzenet küldése
+
+i18n.hu.information.jsp.title=Örökimádás - Vác - Információk
+i18n.hu.information.jsp.hours=Vállalt órák
+i18n.hu.information.jsp.noHours=Önnek nincs vállalt órája.
+i18n.hu.information.jsp.adorators=Szentségimádók most
+i18n.hu.information.jsp.noData=Sajnos nincs megjeleníthető adat.
+i18n.hu.information.jsp.nextAdorators=Szentségimádók a következő órában
+i18n.hu.information.jsp.coordinators=Napszak koordinátorok elérhetősége
+i18n.hu.information.jsp.getExcelDailyInfo=Napszakok fedettségtáblázata
+i18n.hu.information.jsp.getExcelHourlyInfo=Órakoordinátor információ letöltése
+i18n.hu.information.jsp.getExcelAdoratorInfo=Saját adatok letöltése
+i18n.hu.information.jsp.hourlyCoordinators=Óra koordinátorok elérhetősége
+i18n.hu.information.jsp.downloads=Letöltések
