--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/web_en.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/web_en.properties
@@ -7,6 +7,32 @@ web.en.common.day.3=Wednesday
 web.en.common.day.4=Thursday
 web.en.common.day.5=Friday
 web.en.common.day.6=Saturday
+web.en.common.comment=Comment
+web.en.common.name=Name
+web.en.common.phone=Phone
+web.en.common.confirmRequest=Please Confirm
+web.en.common.hour=hour
+web.en.common.errorOccurred=Error Occurred!
+web.en.common.warning=Warning!
+web.en.common.errorData=Error in specified data!
+web.en.common.guest=Guest - 
+
+web.en.coverage.oneTime=One-time application, for this specific hour
+web.en.coverage.thisTime=Do you want to register for this specific occassion: 
+web.en.coverage.noTime=You have not been registered as adorator.
+web.en.coverage.errorName=Name is mandatory!
+web.en.coverage.errorNamePattern=Name contains unallowed charaters, please update!
+web.en.coverage.errorEmail=E-mail address is incorrect!
+web.en.coverage.errorPhone=Phone number is incorrect!
+web.en.coverage.errorMissedEmailOrPhone=Specifying the e-mail address or the phone number is mandatory!
+web.en.coverage.errorConsent=Without your data handling consent we cannot accept your registration request!
+
+web.en.adorRegistration.Failed=Unsuccessful registration, please recheck the provided data and retry.
+web.en.messageToCoordinator.Failed=Message sending failed.
+web.en.getInformation.statusRegistered=Registered Adorator.
+web.en.getInformation.statusGuest=Guest user.
+web.en.getInformation.statusUnknown=Unidentified user. Please provide your contact details to the coordinators using the Send a Message form below so that identification can be made.
+
 web.en.coordinator.0=Coordinator of hour: 0
 web.en.coordinator.1=Coordinator of hour: 1
 web.en.coordinator.2=Coordinator of hour: 2
@@ -38,3 +64,37 @@ web.en.coordinator.42=Evening coordinator (18-23 hours)
 web.en.coordinator.48=General coordinator
 web.en.coordinator.96=Spiritual leader
 
+web.en.guestinfo.usedLogin=Used for login
+web.en.guestinfo.status=Status
+web.en.guestinfo.coordinator=Coordinator
+
+web.en.information.yourName=Your Name
+web.en.information.yourStatus=Your Status
+web.en.information.yourId=Adorator ID Number
+web.en.information.yourHours=Committed Hour(s)
+web.en.information.yourCoordinator=Hour Coordinator
+web.en.information.day=Day
+web.en.information.hour=Hour
+web.en.information.inChapel=in the Chapel
+web.en.information.nextMissing= - next occasion cancelled.
+web.en.information.oneTimeMiss=Cancel next occasion
+web.en.information.onlineHour=Online hour
+web.en.information.oneTimeHour=One-time commitment
+web.en.information.cancelHour=Cancel
+web.en.information.cancelled=The next occasion is cancelled
+web.en.information.undoCancelHour=Withdraw cancel
+web.en.information.coordinatorList=Daily and General Coordinators
+web.en.information.serving=Serving
+web.en.information.hourCoordinators=Hour Coordinators
+web.en.information.pleaseConfirm=Please Confirm
+web.en.information.cancelNextEvent=Are you sure you cannot attend the next one?
+web.en.information.doCancel=Are you cancelling your one-time application?
+web.en.information.doCancelCancel=Can you still attend the next occasion?
+
+web.en.sendMessage.js.badInfo=The contact details you entered contain invalid characters, please correct them!
+web.en.sendMessage.js.badMsg=There are also unacceptable characters in the message, please rephrase the message!
+web.en.sendMessage.js.badCaptcha=Please click on the "I am not a robot" checkbox!
+web.en.sendMessage.js.msgIssue=Error in the message!
+web.en.sendMessage.js.failed=Message sending was failed. please retry.
+web.en.sendMessage.js.sent=Message Sent
+web.en.sendMessage.js.sentDone=Your message has been delivered.
