--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/web_hu.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/web_hu.properties
@@ -7,6 +7,32 @@ web.hu.common.day.3=szerda
 web.hu.common.day.4=csütörtök
 web.hu.common.day.5=péntek
 web.hu.common.day.6=szombat
+web.hu.common.comment=Megjegyzés
+web.hu.common.name=Név
+web.hu.common.phone=Telefon
+web.hu.common.confirmRequest=Megerősítés kérés
+web.hu.common.hour=óra
+web.hu.common.errorOccurred=Hiba történt!
+web.hu.common.warning=Figyelem!
+web.hu.common.errorData=Hiba az adatokban!
+web.hu.common.guest=Vendég - 
+
+web.hu.coverage.oneTime=Jelentkezés egy alkalomra, erre az órára
+web.hu.coverage.thisTime=Biztosan jelentkezni kíván a legközelebbi alkalomra: 
+web.hu.coverage.noTime=Ön végül úgy döntött, hogy mégsem jelentkezik az Örökimádásra.
+web.hu.coverage.errorName=Név megadása szükséges!
+web.hu.coverage.errorNamePattern=A megadott Névben el nem fogadható karakterek is vannak, kérjük a név javítását!
+web.hu.coverage.errorEmail=A megadott e-mail cím nem helyes!
+web.hu.coverage.errorPhone=A megadott telefonszám nem helyes!
+web.hu.coverage.errorMissedEmailOrPhone=Telefonszám és e-mail cím közül legalább az egyik megadása kötelező!
+web.hu.coverage.errorConsent=Adatkezelési hozzájárulás nélkül a jelentkezést nem tudjuk elfogadni!
+
+web.hu.adorRegistration.Failed=A regisztrálás sikertelen, kérjük ellenőrizze a megadott adatokat és próbálkozzon újra.
+web.hu.messageToCoordinator.Failed=Üzenetküldés sikertelen.
+web.hu.getInformation.statusRegistered=Regisztrált adoráló.
+web.hu.getInformation.statusGuest=Vendég felhasználó.
+web.hu.getInformation.statusUnknown=Nem azonosított felhasználó. Kérjük írja meg elérhetőségét a koordinátoroknak, a lentebb található Üzenetküldés segítségével, hogy az azonosítás megtörténhessen.
+
 web.hu.coordinator.0=0. óra órakoordinátora
 web.hu.coordinator.1=1. óra órakoordinátora
 web.hu.coordinator.2=2. óra órakoordinátora
@@ -37,4 +63,39 @@ web.hu.coordinator.36=Délutáni napszak-koordinátor (12-17 óra)
 web.hu.coordinator.42=Esti napszak-koordinátor (18-23 óra)
 web.hu.coordinator.48=Általános koordinátor
 web.hu.coordinator.96=Spirituális vezető
+
+web.hu.guestinfo.usedLogin=Belépéshez használva
+web.hu.guestinfo.status=Státusz
+web.hu.guestinfo.coordinator=Koordinátor
+
+web.hu.information.yourName=Az Ön neve
+web.hu.information.yourStatus=Státusza
+web.hu.information.yourId=Az Ön adorálói azonosítószáma
+web.hu.information.yourHours=Vállalt órám/óráim
+web.hu.information.yourCoordinator=Órafelelős
+web.hu.information.day=Nap
+web.hu.information.hour=Óra
+web.hu.information.inChapel=Kápolnában
+web.hu.information.nextMissing= - legközelebbi alkalom lemondva.
+web.hu.information.oneTimeMiss=Következő alkalom lemondása
+web.hu.information.onlineHour=Online óra
+web.hu.information.oneTimeHour=Egyszer vállalt óra
+web.hu.information.cancelHour=Lemondás
+web.hu.information.cancelled=Az óra egyszer lemondva
+web.hu.information.undoCancelHour=Lemondás viszavonása
+web.hu.information.coordinatorList=Napszak és Általános Koordinátorok
+web.hu.information.serving=Szolgálat
+web.hu.information.hourCoordinators=Óra Koordinátorok
+web.hu.information.pleaseConfirm=Megerősítés kérés
+web.hu.information.cancelNextEvent=Biztosan nem tud részt venni a legközelebbi alkalmon
+web.hu.information.doCancel=Lemondja a jelentkezést?
+web.hu.information.doCancelCancel=Mégis rész tud venni a következő alkalmon?
+
+web.hu.sendMessage.js.badInfo=A megadott elérhetőségben el nem fogadható karakterek is vannak, kérjük javítását!
+web.hu.sendMessage.js.badMsg=Az Üzenetben el nem fogadható karakterek is vannak, kérjük fogalmazza át az üzenetet!
+web.hu.sendMessage.js.badCaptcha=Kérem jelölje be a "Nem vagyok robot" négyzetet!
+web.hu.sendMessage.js.msgIssue=Hiba az üzenetben!
+web.hu.sendMessage.js.failed=Az üzenet elküldése sikertelen volt, próbálkozzon ismét.
+web.hu.sendMessage.js.sent=Elküldve
+web.hu.sendMessage.js.sentDone=Az üzenet elküldése sikeres volt.
 
