export to excel has multi-language now - for #2

--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_en.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_en.properties
@@ -141,4 +141,4 @@ i18n.en.information.jsp.getExcelDailyInfo=Adoration Coverage
 i18n.en.information.jsp.getExcelHourlyInfo=Download Hour Coordinator information
 i18n.en.information.jsp.getExcelAdoratorInfo=Download self data
 i18n.en.information.jsp.hourlyCoordinators=Availability of the Hour Coordinators
-i18n.hu.information.jsp.downloads=Downloads
+i18n.en.information.jsp.downloads=Downloads
