--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/web_en.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/web_en.properties
@@ -98,3 +98,13 @@ web.en.sendMessage.js.msgIssue=Error in the message!
 web.en.sendMessage.js.failed=Message sending was failed. please retry.
 web.en.sendMessage.js.sent=Message Sent
 web.en.sendMessage.js.sentDone=Your message has been delivered.
+
+web.en.xls.adorator=Adorator
+web.en.xls.night=Night
+web.en.xls.morning=Morning
+web.en.xls.afternoon=Afternoon
+web.en.xls.evening=Evening
+web.en.xls.hourCoordinator=Hour Coordinator
+web.en.xls.public=Public
+web.en.xls.hidden=Hidden
+web.en.xls.ph=ph: 
