--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/web_hu.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/web_hu.properties
@@ -99,3 +99,12 @@ web.hu.sendMessage.js.failed=Az üzenet elküldése sikertelen volt, próbálkoz
 web.hu.sendMessage.js.sent=Elküldve
 web.hu.sendMessage.js.sentDone=Az üzenet elküldése sikeres volt.
 
+web.hu.xls.adorator=Adoráló
+web.hu.xls.night=Éjszaka
+web.hu.xls.morning=Délelőtt
+web.hu.xls.afternoon=Délután
+web.hu.xls.evening=Este
+web.hu.xls.hourCoordinator=Órakoordinátor
+web.hu.xls.public=Publikus
+web.hu.xls.hidden=Titkos
+web.hu.xls.ph=tel: 
