multi-language of lists page - for #2

--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_en.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_en.properties
@@ -142,3 +142,8 @@ i18n.en.information.jsp.getExcelHourlyInfo=Download Hour Coordinator information
 i18n.en.information.jsp.getExcelAdoratorInfo=Download self data
 i18n.en.information.jsp.hourlyCoordinators=Availability of the Hour Coordinators
 i18n.en.information.jsp.downloads=Downloads
+
+i18n.en.adoratorList.jsp.title=Perpetual Adoration - Vác - List of Adorators and Hours
+i18n.en.adoratorList.jsp.selection=Select from the possibilities below...
+i18n.en.adoratorList.jsp.people=List of Adorators
+i18n.en.adoratorList.jsp.hours=List of Committed Hours
