--- a/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_hu.properties
+++ b/adoration-application/modules/adoration-webapp/src/main/resources/i18n/messages_hu.properties
@@ -142,3 +142,8 @@ i18n.hu.information.jsp.getExcelHourlyInfo=Órakoordinátor információ letölt
 i18n.hu.information.jsp.getExcelAdoratorInfo=Saját adatok letöltése
 i18n.hu.information.jsp.hourlyCoordinators=Óra koordinátorok elérhetősége
 i18n.hu.information.jsp.downloads=Letöltések
+
+i18n.hu.adoratorList.jsp.title=Örökimádás - Vác - Adorátorok és Órák listája
+i18n.hu.adoratorList.jsp.selection=Válassz az alábbi lehetőségek közül...
+i18n.hu.adoratorList.jsp.people=Adorálók Listája
+i18n.hu.adoratorList.jsp.hours=Vállalt Órák Listája
